Bug 100898 - Sidebar decks without a content panel title are unattainable with keyboard
Summary: Sidebar decks without a content panel title are unattainable with keyboard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.8.2 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.1.0
Keywords: accessibility, easyHack, skillDesign, topicUI
: 85337 (view as bug list)
Depends on:
Blocks: Sidebar-Animation Sidebar-Accessibility Sidebar-Slide-Transition
  Show dependency treegraph
 
Reported: 2016-07-13 17:26 UTC by Alex ARNAUD
Modified: 2018-01-30 23:36 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex ARNAUD 2016-07-13 17:26:56 UTC
Dear LibreOffice community,

with the latest LibreOffice Impress (5.1.4) and the Orca scree reader I've tried to access the transition pane with the keyboard but I'm not able to enter in it.

Steps to reproduce : 
1) Open LibreOffice impress
2) Active the transition pane side bar
3) Move your cursor with F6 until you see the focus on "transition"
4) Press tab (two times)

Result : Orca says "check box unchecked"
Expected result : the keyboard caret should be inside the transition pane

Best regards.
Comment 1 Arnaud Versini 2016-07-15 18:43:26 UTC
Confirmed on LibreOffice 5.0.2.1.

The unchecked combobox seems to be the menu on the top of the sidebar. And all pane from te sidebar are unaccessible only with F6 except "Properties".
Comment 2 jani 2016-09-08 11:05:17 UTC
Remark converted to an easyHack, just need input from UX team on which keys to use.
Comment 3 Yousuf Philips (jay) (retired) 2016-09-09 20:06:46 UTC
So once you reach the sidebar with F6, you can press the arrow keys to jump between the deck title bar, content panel titles, and the tab bar buttons. Once you are selected on a content panel title, you can press tab to jump into the content panel, but without the content panel title, there isnt a means to reach the contents.

The most ideal thing is that once focus is reached with the deck title bar, the tab button should jump through the entire deck's content in a similar way to jumping through the contents of a tab in a dialog.
Comment 4 Heiko Tietze 2016-09-12 08:22:16 UTC
Arrow keys must not be used for traveling through all controls, that's the purpose of tab. Arrow is used to navigation within controls such as lists.

The question is whether or not the deck title "slide transition" is part of the sidebar tabs. I would say no because there is another item "slide transition" for the actual sidebar tabs. 

When I tab from the deck title (running 5.3 under Windows) I do not jump to the list of transitions. When I'm in the sidebar (using the mouse to enter) the navigation stays within. Sounds acceptable. So the question to me is how to deal with the headline, keep it either readable and add means to enter the sidebar (e.g. per Enter) or make this label non-readable (static, non-focusable text) so that the sidebar tabs work like a normal toolbar.

My suggestion is to have a shortcut to access the sidebar tabs, navigate through the tabs using tab, jump the sidebar deck per Enter (and/or Space) ignoring the title bar and have the usual tab navigation there. We should provide a dedicated short cut for the sidebar.
Comment 5 V Stuart Foote 2016-09-12 13:23:55 UTC
@Jay, your understanding is correct (@Hieko is a bit misguided, sorry) but we have to keep it consistent. TAB should remain a restricted control on the Sidebar.

Each Deck of the Sidebar has (or should have) a Title -- it should be focusable to allow reaching the "Close deck" button on the title bar.

Likewise each Content Panel present in the Deck should have a Title -- it also should be focusable to reach the "More Options" button on the content panel.

So for navigating the Sidebar Deck -- for each Content Panel we must consistently instrument the .UI packing so that <TAB>, <Shift><TAB> alone cycle between *controls* within the CONTENT Panels--*once reached*. And the issue here is that you can't reach the slide transitions list without a mouse click.

Also cursor <DOWN> or <RIGHT>, <UP> or <LEFT> alone traverse the buttons/lists elements within each content panel. 

<ENTER> is the selection action (corresponding to a mouse click).  

Presently, movement *between* the content panels is only possible with cursor <DOWN>, <RIGHT>, <UP> or <LEFT> *by cycling with TAB/<Shift><TAB> focus back to the Content Panel title*--this is correct. 

Unfortunately with no title (or ability to focus to the title) and you can't move to the other content panels on the deck.

Provide the titles, make them focusable--it all works correctly then.

Enhancement for keyboard navigation would be to provide shortcut/mnemonic accelerator to each Content panel and TabBar (bug 85402)
Comment 6 V Stuart Foote 2016-09-12 13:27:39 UTC
(In reply to V Stuart Foote from comment #5)
> Enhancement for keyboard navigation would be to provide shortcut/mnemonic
> accelerator to each Content panel and TabBar (bug 85402)

s/85402/bug 84502/
Comment 7 Heiko Tietze 2016-09-12 14:09:24 UTC
(In reply to V Stuart Foote from comment #5)
> Each Deck of the Sidebar has (or should have) a Title -- it should be
> focusable to allow reaching the "Close deck" button on the title bar.

The function to hide the sidebar is so important that you accept detrimental effects on the workflow? Btw, something that has no counterpart as F6 ignores the sidebar when it is closed.
 
> Likewise each Content Panel present in the Deck should have a Title -- it
> also should be focusable to reach the "More Options" button on the content
> panel.

Again, you scarify the common access in order to allow collapsing a section. How to you reach to the list of styles? (That's one issue mentioned by Texou).
And regarding "more options" the first place to access the dialog should be from the main menu (but tabbing to it could be possible).

> Enhancement for keyboard navigation would be to provide shortcut/mnemonic
> accelerator to each Content panel and TabBar (bug 85402)

Hard to believe that all content panels can have own shortcuts. I would rather make then accessible per hotkey, e.g. &Style (first S is for the main menu second to go to the sidebar) or &Character etc.
Comment 8 V Stuart Foote 2016-09-12 14:19:05 UTC
(In reply to Heiko Tietze from comment #7)
Heiko, we are talking about different things.

I am interested in the minimal instrumentation necessary to make the Sidebar navigable by Keyboard alone.  That requires a structure in the .UI glade markup that supports it.

You continue to think in terms of GUI design and mouse aided access. Please spend time navigating the UI with keyboard alone (as Jay has recently spent time doing) and you'll gain a better appreciation of these real issues that greatly affect our Assistive Technology tools support--not our normal Benjamin's, and hopefully it will help you understand these design issues better.
Comment 9 Yousuf Philips (jay) (retired) 2016-09-13 00:37:34 UTC
(In reply to V Stuart Foote from comment #5)
> @Jay, your understanding is correct (@Hieko is a bit misguided, sorry) but
> we have to keep it consistent. TAB should remain a restricted control on the
> Sidebar.

Didnt understand this. :D

> Each Deck of the Sidebar has (or should have) a Title -- it should be
> focusable to allow reaching the "Close deck" button on the title bar.

I dont think an a11y user would want to close the deck and they dont have any feedback that a deck is open or closed, as you can f6 to it when it is partially collapsed with no option in that form to open it unless you reach the tab bar. (bug 102031)

> Likewise each Content Panel present in the Deck should have a Title -- it
> also should be focusable to reach the "More Options" button on the content
> panel.

I think the except to this rule is when there is only one content panel, so the deck title bar becomes the content panel's title.

> So for navigating the Sidebar Deck -- for each Content Panel we must
> consistently instrument the .UI packing so that <TAB>, <Shift><TAB> alone
> cycle between *controls* within the CONTENT Panels--*once reached*. And the
> issue here is that you can't reach the slide transitions list without a
> mouse click.

So are you including the title bar as part of the sidebar deck and when you say controls within the content panels, are you including the content panel title as part of this?

> Also cursor <DOWN> or <RIGHT>, <UP> or <LEFT> alone traverse the
> buttons/lists elements within each content panel. 

As various buttons are grouped in a collection, you cant jump between these groups with the arrow keys.
Comment 10 V Stuart Foote 2016-10-24 00:56:07 UTC
*** Bug 85337 has been marked as a duplicate of this bug. ***
Comment 11 Heiko Tietze 2017-01-14 10:48:56 UTC
To cut the lengthy discussion about accessibility short and to make this hack really easy: Yes, all content panel sections need a title. Please add "Transitions" to the deck. Removing UX from the ticket - and the a11y discussion goes to the mailing list.
Comment 12 Yousuf Philips (jay) (retired) 2017-01-19 13:52:33 UTC
Well this issue seems not to be for every single deck without a content panel, as the styles & formatting, gallery and navigator decks works fine and it doesnt have content panels. The problem seems to be limited to the slide transition and custom animation decks in impress as pressing tab after focus has reached the sidebar title bar's close button causes the deck to refresh each time you press it.
Comment 13 Commit Notification 2018-01-17 09:41:41 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=777bf677b38b293378bc83cf09bf08125c19f31d

tdf#100898: slide transition panel is now Tab-reachable

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2018-01-29 13:09:26 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad01b0031688a3e3bb1741e4732bfa8762635478

tdf#100898: custom animation panel is now Tab-reachable

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Katarina Behrens (Inactive) 2018-01-29 13:26:58 UTC
There's another class of issues where Tab navigation doesn't work as expected and those are the cases where a widget (most often some derivative of ValueSet) is the one and the only child of a content panel. 

But those are covered by bug#102077 and need to be fixed differently. Thus I consider this ticket to be fixed
Comment 16 Yousuf Philips (jay) (retired) 2018-01-30 23:36:55 UTC
Tested the behaviour and found two issues (please file new bug reports for them if you feel they cant/shouldnt be fixed here).

1. If you access the sidebar with F6, tab correctly works to cycle through the deck title and non-content panel controls, but if you click on a non-content panel control and use tab, you wont be able to reach the deck title.

2. After accessing the sidebar with F6, the shift+tab cursor movement order jumps incorrectly to the deck title and then transition/animation presets rather than the correct opposite order.

Version: 6.1.0.0.alpha0+
Build ID: e29565272c57c6cd09cb015c2e66bfe8a1f4d7d2
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded