tdf#100898: slide transition panel is now Tab-reachable

This is a cheap-o solution, a better approach would be to remove
intermediate sidebar/SlideTransitionPanel and create panel layout
directly in sd PanelFactory, but that would require quite some code
rearrangement

Change-Id: Ief2d8c3dc365b739b2eba65c6142d5301610d479
Reviewed-on: https://gerrit.libreoffice.org/48018
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>